services/jellystat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellystat
  namespace: jellyfin
spec:
  selector:
    app: jellystat
  ports:
    - port: 3000
      targetPort: 3000
