services/jellystat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellystat
  namespace: jellyfin
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: jellystat.labmatt.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellystat
                port:
                  number: 3000
